--- a/components/ui/cardItem/carditem.module.css
+++ b/components/ui/cardItem/carditem.module.css
@@ -13,6 +13,10 @@
   height: 511px;
 }
 
+.cartItem__photo__catalog {
+  width: 376px;
+}
+
 .cartItem__photo_aboutus {
   width: 314px;
   height: 425px;
@@ -71,6 +75,10 @@
     object-fit: cover;
     width: 188px;
     height: 255px;
+  }
+
+  .cartItem__photo__catalog {
+    width: 270px;
   }
 
   .cartItem__button {
